Changes since version 0.8.4b
- More work on SMIL, support for layout/root-layout/region tags so one can
  position a mediatype in a rectangle, other than video/audio also support
  for text/img mediatypes and flow control with begin/dur/end attribute that
  can be time values but also (mouse) events or clip ends
- Added option to adjust the colors of playlist and viewing area
- Added an option in playlist context menu to show all nodes in case of XML
  based playlists (ASX or SMIL)
- Added option whether backends should set volume on start
- Original gcc-2.95 compile fixes (Leo Savernik)
Changes since version 0.8.4a
- gcc-2.95 compile fixes (Leo Savernik) hopefully correctly backported
- Read playlist from audio/m3u mimetypes
- Don't print log to stdout but to stderr instead (BR100422)
- Don't set volume on starting MPlayer because MPlayer sets volume relative
  to current volume (BR99953)
Changes since version 0.8.4
- Fix keyboard shortcuts for increase/decrease volume for fullscreen
- Better 100% zoom calculation
- Prevents ways to crash KMPlayer via DCOP when just started
- Fix MPlayer's command queue after manually stop a movie
Changes since version 0.8.4-rc5
- Debian builds now a kmplayer-i18n package too
- Controlpanel uses paletteForegroundColor for drawing
- Added a volume control to controlpanel that let backends control the volume
  (unlike the slider in menu, which uses kmix) + two actions for shortcut
  possibility in 'Configure Shortcuts' dialog
- Bookmarking a VDR channel now bookmarks it as kmplayer://vdrsource/channel
- When controlpanel is in autohide mode, move it over the video instead of
  shifting the video up causing annoying flickering (bug 96861)
- up/down/ok/back/menu for VDR are added to the toolbar as well when connected
- Unmute DVB card when VDR reports volume of zero, restore on exit
- Auto scroll playlist when current is outside the viewing area
Changes since version 0.8.4-rc4