@@ -2,7 +2,8 @@ Changes since version 0.8.4b
 - More work on SMIL, support for layout/root-layout/region tags so one can
   position a mediatype in a rectangle, other than video/audio also support
   for text/img mediatypes and flow control with begin/dur/end attribute that
-  can be time values but also (mouse) events or clip ends
+  can be time values but also (mouse) events or clip ends and set/animate can
+  be used to alter arguments on-the-fly.
 - Added option to adjust the colors of playlist and viewing area
 - Added an option in playlist context menu to show all nodes in case of XML
   based playlists (ASX or SMIL)
